change contact font size

--- a/index.html
+++ b/index.html
@@ -330,28 +330,15 @@
           </div>
     
           <div class="screen-body-item">
-            <!-- <form class="app-form">
-              <label for="" class="app-form-group"></label>
-              <input type="text" class="name" placeholder="Name">
-              <label for="" class="app-form-group"></label>
-              <input type="email" class="email" placeholder="Email">
-              <label for="" class="app-form-group"></label>
-              <textarea name="" id="" class="message" placeholder="Message"></textarea>
-              <div class="app-form-group buttons">
-                <button class="app-form-group__button">Cancel</button>  
-                <button type="submit">Send</button>  
-              </div>
-            </form> -->
-
             <form class="app-form" method="POST" data-netlify="true">
               <div class="app-form-group">
-                <input name="name" type="text" class="app-form-group__control" placeholder="NAME">
+                <input name="name" type="text" class="app-form-group__control" placeholder="Name">
               </div>
               <div class="app-form-group">
-                <input name="email" type="email" class="app-form-group__control" placeholder="EMAIL">
+                <input name="email" type="email" class="app-form-group__control" placeholder="Email">
               </div>
               <div class="app-form-group message">
-                <textarea name="message" type="text" class="app-form-group__control" placeholder="MESSAGE"></textarea>
+                <textarea name="message" type="text" class="app-form-group__control" placeholder="Message"></textarea>
               </div>
               <div data-netlify-recaptcha="true"></div>
               <div class="app-form-group buttons">
@@ -359,22 +346,6 @@
                 <button type="submit" class="app-form-group__button">Send</button>  
               </div>
             </form>
-
-            <!-- <form class="app-form">
-              <div class="app-form-group">
-                <input type="text" class="app-form-group__control" placeholder="NAME">
-              </div>
-              <div class="app-form-group">
-                <input type="email" class="app-form-group__control" placeholder="EMAIL">
-              </div>
-              <div class="app-form-group message">
-                <textarea type="text" class="app-form-group__control" placeholder="MESSAGE"></textarea>
-              </div>
-              <div class="app-form-group buttons">
-                <button class="app-form-group__button">Cancel</button>  
-                <button type="submit" class="app-form-group__button">Send</button>  
-              </div>
-            </form> -->
         </div>
 
       </div>
