adding media queries

--- a/index.html
+++ b/index.html
@@ -84,13 +84,15 @@
       data-aos-offset="300"
       data-aos-delay="20"
       data-aos-duration="600">Skills<span class="border"></span></h1>
-    <p class="skills__description"
-    data-aos="fade-up" 
-      data-aos-offset="300"
-      data-aos-delay="20"
-      data-aos-duration="600">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat alias enim architecto sapiente. Ipsum sit amet consectetur, adipisicing elit similique adipisci, placeat numquam neque sint assumenda.
-    </p>
+    <div class="detail__container">
+      <p class="skills__description"
+        data-aos="fade-up" 
+        data-aos-offset="300"
+        data-aos-delay="20"
+        data-aos-duration="600">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat alias enim architecto sapiente. Ipsum sit amet consectetur, adipisicing elit similique adipisci, placeat numquam neque sint assumenda.
+      </p>
+    </div>
 
     <div class="skills__container"
     data-aos="zoom-out" 
