update projects display

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
+  <link rel="icon" type="image/png" href="./img/favicon.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
@@ -63,13 +64,20 @@
           <h6 class="heading-sub">Myself</h6>
         </div>
         <p class="description">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat possimus ullam amet aliquam ex beatae, reprehenderit libero. Necessitatibus natus alias odit error distinctio obcaecati, corrupti quo veniam eum laboriosam reiciendis, possimus dolorem quibusdam doloremque quas. Lorem, ipsum dolor sit amet consectetur adipisicing elit quibusdam minima.
+          Hi, I'm Arief! a self-taught web developer based in Jakarta. My main focus has mostly been on frontend, which uses JavaScript and React JS. Some of the skills demonstrated in this portfolio include HTML, CSS Grid, flexbox, SASS and JavaScript.
+          <br>
+          <br>
+          Before learning web development, I worked at printing company in Japan where I learned about Japanese work ethic such as hard work, discipline, and team spirit.
+          <br>
+          <br>
+          I'm always looking for an opportunity to code and learn new things for continuous improvement.
+
         </p>
         <div class="social-media">
           <ul class="nav-items">
-            <a class="icon-link" href="#"><i class="fab fa-linkedin-in"></i></a>
-            <a class="icon-link" href="#"><i class="fab fa-github-square"></i></a>
-            <a class="icon-link" href="#"><i class="fab fa-instagram-square"></i></a>
+            <a class="icon-link" target="_blank" href="https://www.linkedin.com/in/arief-yudistira-64a672193/"><i class="fab fa-linkedin-in"></i></a>
+            <a class="icon-link" target="_blank" href="https://github.com/ariefyud"><i class="fab fa-github-square"></i></a>
+            <a class="icon-link" target="_blank" href="https://www.instagram.com/ariefyudth/"><i class="fab fa-instagram-square"></i></a>
           </ul>
         </div>
       </div>
@@ -90,7 +98,7 @@
         data-aos-offset="300"
         data-aos-delay="20"
         data-aos-duration="600">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat alias enim architecto sapiente. Ipsum sit amet consectetur, adipisicing elit similique adipisci, placeat numquam neque sint assumenda.
+        I started my coding journey in summer 2020, and earned some programming skills and technologies since that time. But still, I understand there are many more things to learn ahead. I have tried to make learning web development as comfortable as possible until I can really implement it properly.
       </p>
     </div>
 
@@ -118,24 +126,24 @@
     <div class="project-1">
       <div class="right-slide">
         <h5 class="right-slide__title">&mdash; Natours</h5>
-        <p class="right-slide__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo reprehenderit tempore impedit illum sapiente consequatur dicta nulla voluptas alias ullam itaque, provident iure modi. <span class="project-1__span"></span>
-          <a href="#" id="btn1" class="btn mini">Live View</a>
-          <a href="#" id="btn2" class="btn mini">Source Code</a>
+        <p class="right-slide__description">This is website tour project that I have built by following tutorial using HTML & SASS. This website is fully responsive and a lot of CSS animation in there.<span class="project-1__span"></span>
+          <a href="https://ariefyud.github.io/natours/" target="_blank" id="btn1" class="btn mini">Live View</a>
+          <a href="https://github.com/ariefyud/natours" target="_blank" id="btn2" class="btn mini">Source Code</a>
         </p>
-        <img class="right-slide__img1" id="office" src="img/img-1.jpg">
-        <img class="right-slide__img2" id="building" src="img/img-2.jpg">
+        <img class="right-slide__img1" id="office" src="img/natours-1.jpg">
+        <img class="right-slide__img2" id="building" src="img/natours-2.jpg">
         <div class="right-slide__box" id="box"></div>
       </div>
     </div>
 
     <div class="project-2">
       <div class="left-slide">
-        <img class="left-slide__img1" id="office" src="img/img-1.jpg">
-        <img class="left-slide__img2" id="building" src="img/img-2.jpg">
-        <h5 class="left-slide__title">&mdash; Robofriends</h5>
-        <p class="left-slide__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo reprehenderit tempore impedit illum sapiente consequatur dicta nulla voluptas alias ullam itaque, provident iure modi. <span class="project-2__span"></span>
-          <a href="#" id="btn3" class="btn mini">Live View</a>
-          <a href="#" id="btn4" class="btn mini">Source Code</a>
+        <img class="left-slide__img1" id="office" src="img/gamba-1.jpg">
+        <img class="left-slide__img2" id="building" src="img/gamba-2.jpg">
+        <h5 class="left-slide__title">&mdash; Green Store</h5>
+        <p class="left-slide__description">This is only frontend UI of vegetables e-store using HTML, CSS and SASS. Mostly using green color because it suitable to vegetables color.<span class="project-2__span"></span>
+          <a href="https://ariefyud.github.io/green-store/" target="_blank" id="btn3" class="btn mini">Live View</a>
+          <a href="https://github.com/ariefyud/green-store" target="_blank" id="btn4" class="btn mini">Source Code</a>
         </p>
         <div class="left-slide__box" id="box"></div>
       </div>
@@ -151,15 +159,15 @@
       data-aos-offset="400"
       data-aos-delay="20"
       data-aos-duration="500">
-            <h2 class="title">Digicard</h2>
+            <h2 class="title">Kanban</h2>
             <span></span>
             <div class="block">
               <a id="block-btn" class="btn mini" onclick="visible1()">Details</a>
               <img class="block__img1" src="img/black-1.jpg" id="img1">
               <div class="block__text" id="text-1">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, temporibus nulla quo et minus ipsum officia nobi.</p>
-                <a href="#" class="btn mini">Live View</a>
-                <a href="#" class="btn mini">Source Code</a>
+                <p>Like a whiteboard or blackboard with sticky notes, you can simply drag and drop text through the workflow and demonstrate progress.</p>
+                <a href="https://ariefyud.github.io/drag-and-drop/" target="_blank" class="btn mini">Live View</a>
+                <a href="https://github.com/ariefyud/drag-and-drop" target="_blank" class="btn mini">Source Code</a>
               </div>
               <div class="blacklayer"></div>
             </div>
@@ -169,15 +177,15 @@
       data-aos-offset="400"
       data-aos-delay="20"
       data-aos-duration="500">
-            <h2 class="title">Janken</h2>
+            <h2 class="title">Duel Dice</h2>
             <span></span>
             <div class="block">
               <a id="block-btn" class="btn mini" onclick="visible2()">Details</a>
               <img class="block__img2" src="img/black-2.jpg" id="img2">
               <div class="block__text" id="text-2">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, temporibus nulla quo et minus ipsum officia nobi.</p>
-                <a href="#" class="btn mini">Live View</a>
-                <a href="#" class="btn mini">Source Code</a>
+                <p>Using JavaScript DOM to handle event and using random method number from 1 to 6 to display in dice. Who get score 50 first is the winner.</p>
+                <a href="https://ariefyud.github.io/duel-dice/" target="_blank" class="btn mini">Live View</a>
+                <a href="https://github.com/ariefyud/duel-dice" target="_blank" class="btn mini">Source Code</a>
               </div>
               <div class="blacklayer"></div>
             </div>
@@ -190,15 +198,15 @@
       data-aos-offset="400"
       data-aos-delay="20"
       data-aos-duration="500">
-            <h2 class="title">Real Estate</h2>
+            <h2 class="title">Color Generator</h2>
             <span></span>
             <div class="block">
               <a id="block-btn" class="btn mini" onclick="visible3()">Details</a>
               <img class="block__img3" src="img/black-3.jpg" id="img3">
               <div class="block__text" id="text-3">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, temporibus nulla quo et minus ipsum officia nobi.</p>
-                <a href="#" class="btn mini">Live View</a>
-                <a href="#" class="btn mini">Source Code</a>
+                <p>You can find the perfect matching color scheme for your next project! Choose nice color palettes and color gradients!</p>
+                <a href="https://ariefyud.github.io/color-generator/" target="_blank" class="btn mini">Live View</a>
+                <a href="https://github.com/ariefyud/color-generator" target="_blank" class="btn mini">Source Code</a>
               </div>
               <div class="blacklayer"></div>
             </div>
@@ -208,15 +216,15 @@
       data-aos-offset="400"
       data-aos-delay="20"
       data-aos-duration="500">
-            <h2 class="title">Kanban</h2>
+            <h2 class="title">Digicard Game</h2>
             <span></span>
             <div class="block">
               <a id="block-btn" class="btn mini" onclick="visible4()">Details</a>
               <img class="block__img4" src="img/black-4.jpg" id="img4">
               <div class="block__text" id="text-4">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, temporibus nulla quo et minus ipsum officia nobi.</p>
-                <a href="#" class="btn mini">Live View</a>
-                <a href="#" class="btn mini">Source Code</a>
+                <p>I use images from Digimon API website. You have to reload this website to decide winner or loser based on total experience.</p>
+                <a href="https://ariefyud.github.io/digicard-game/" target="_blank" class="btn mini">Live View</a>
+                <a href="https://github.com/ariefyud/digicard-game" target="_blank" class="btn mini">Source Code</a>
               </div>
               <div class="blacklayer"></div>
             </div>
@@ -229,15 +237,15 @@
       data-aos-offset="400"
       data-aos-delay="20"
       data-aos-duration="500">
-            <h2 class="title">Wheater App</h2>
+            <h2 class="title">Form Validator</h2>
             <span></span>
             <div class="block">
               <a id="block-btn" class="btn mini" onclick="visible5()">Details</a>
               <img class="block__img5" src="img/black-5.jpg" id="img5">
               <div class="block__text" id="text-5">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, temporibus nulla quo et minus ipsum officia nobi.</p>
-                <a href="#" class="btn mini">Live View</a>
-                <a href="#" class="btn mini">Source Code</a>
+                <p>Form validator using Javascript, HTML and CSS. This kind of form mostly used for registration.</p>
+                <a href="https://ariefyud.github.io/form-validator/" target="_blank" class="btn mini">Live View</a>
+                <a href="https://github.com/ariefyud/form-validator" target="_blank" class="btn mini">Source Code</a>
               </div>
               <div class="blacklayer"></div>
             </div>
@@ -247,23 +255,67 @@
       data-aos-offset="400"
       data-aos-delay="20"
       data-aos-duration="500">
-            <h2 class="title">Hotel Booking</h2>
+            <h2 class="title">Guess My Number</h2>
             <span></span>
             <div class="block">
               <a id="block-btn" class="btn mini" onclick="visible6()">Details</a>
               <img class="block__img6" src="img/black-6.jpg" id="img6">
               <div class="block__text" id="text-6">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, temporibus nulla quo et minus ipsum officia nobi.</p>
-                <a href="#" class="btn mini">Live View</a>
-                <a href="#" class="btn mini">Source Code</a>
+                <p>If you can guess number right, you win. This simple game has built to strengthen my understanding about JavaScript DOM.</p>
+                <a href="https://ariefyud.github.io/guess-my-number/" target="_blank" class="btn mini">Live View</a>
+                <a href="https://github.com/ariefyud/guess-my-number" target="_blank" class="btn mini">Source Code</a>
               </div>
               <div class="blacklayer"></div>
             </div>
           </td>
         </tr>
 
+        <tr>
+          <td
+          data-aos="fade-right" 
+      data-aos-offset="400"
+      data-aos-delay="20"
+      data-aos-duration="500">
+            <h2 class="title">Marimoya Store</h2>
+            <span></span>
+            <div class="block">
+              <a id="block-btn" class="btn mini" onclick="visible7()">Details</a>
+              <img class="block__img7" src="img/black-7.jpg" id="img7">
+              <div class="block__text" id="text-7">
+                <p>E-commerce using React JS and commerce js to manage product. Add item to cart, set shipping address and pay with credit card.</p>
+                <a href="https://ariefyud.github.io/" target="_blank" class="btn mini">Live View</a>
+                <a href="https://github.com/ariefyud/marimoya-store/tree/master" target="_blank" class="btn mini">Source Code</a>
+              </div>
+              <div class="blacklayer"></div>
+            </div>
+          </td>
+          <!-- <td
+          data-aos="fade-left" 
+      data-aos-offset="400"
+      data-aos-delay="20"
+      data-aos-duration="500">
+            <h2 class="title">Guess My Number</h2>
+            <span></span>
+            <div class="block">
+              <a id="block-btn" class="btn mini" onclick="visible8()">Details</a>
+              <img class="block__img8" src="img/black-8.jpg" id="img8">
+              <div class="block__text" id="text-8">
+                <p>If you can guess number right, you win. This simple game has built to strengthen my understanding about JavaScript DOM.</p>
+                <a href="https://ariefyud.github.io/guess-my-number/" target="_blank" class="btn mini">Live View</a>
+                <a href="https://github.com/ariefyud/guess-my-number" target="_blank" class="btn mini">Source Code</a>
+              </div>
+              <div class="blacklayer"></div>
+            </div>
+          </td> -->
+        </tr>
+
       </table>
     </div>
+
+    <!-- See all projects -->
+    <!-- <div class="see-more">
+      <a id="block-btn" class="btn mini more" onclick="">Details</a>
+    </div> -->
     
   </section>
 
@@ -358,9 +410,9 @@
   <footer class="footer">
     <div class="social-media">
       <ul class="social-media__items">
-          <a class="icon-link" href="#"><i class="fab fa-linkedin-in"></i></a>
-          <a class="icon-link" href="#"><i class="fab fa-github"></i></a>
-          <a class="icon-link" href="#"><i class="fab fa-instagram"></i></a>
+          <a class="icon-link" target="_blank" href="https://www.linkedin.com/in/arief-yudistira-64a672193/"><i class="fab fa-linkedin-in"></i></a>
+          <a class="icon-link" target="_blank" href="https://github.com/ariefyud"><i class="fab fa-github"></i></a>
+          <a class="icon-link" target="_blank" href="https://www.instagram.com/ariefyudth/"><i class="fab fa-instagram"></i></a>
       </ul>
     </div>
     <h6>Created by ariefyudth | &#169; 2020 All rights reserved.</h6>
