edit project link

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
               <img class="block__img7" src="img/black-7.jpg" id="img7">
               <div class="block__text" id="text-7">
                 <p>E-commerce using React JS and commerce js to manage product. Add item to cart, set shipping address and pay with credit card.</p>
-                <a href="https://ariefyud.github.io/" target="_blank" class="btn mini">Live View</a>
+                <a href="https://ariefyud.github.io/marimoya-store/" target="_blank" class="btn mini">Live View</a>
                 <a href="https://github.com/ariefyud/marimoya-store/tree/master" target="_blank" class="btn mini">Source Code</a>
               </div>
               <div class="blacklayer"></div>
